beta/binary.css
.world
{
	/*display:inline;*/
	position:absolute;
    top:50%;
    left:50%;
    transform: translate(-50%, -50%);
}

.world-container
{
	width: 100%;
	height: 100%;
}
body 
{
	overflow:hidden;
    font-size: 25px;
}
.left-sea 
{
	position: absolute;
	font-family: courier;
	height: 100%;
}

.water {
	color: blue;
}

.loc-marker{
	color: white;
}
.right-sea
{
	position: absolute;
	font-family: courier;
	height: 100%;
}

.words
{
    color: black;
    font-weight: bold;
}

